# trading-bot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: .env.example  Caddyfile  config.yaml
docs/superpowers/plans/: 2026-05-12-trading-bot-plan-1-foundation.md  2026-05-12-trading-bot-plan-2-trading-core.md  2026-05-12-trading-bot-plan-3-monitoring.md  2026-05-13-trading-bot-plan-4-production-readiness.md  2026-05-14-dashboard-live-control.md
docs/superpowers/specs/: 2026-05-12-trading-bot-design.md  2026-05-13-plan4-production-readiness-design.md  2026-05-14-dashboard-live-control-design.md
scripts/: setup-vps.sh
src/: main.py
src/backtesting/: engine.py
src/core/: config.py  event_bus.py  logger.py  types.py
src/data/: feed.py
src/execution/: order_manager.py
src/monitoring/: dashboard.py  telegram_bot.py
src/monitoring/templates/: index.html
src/monitoring/templates/partials/: portfolio.html  status.html  strategies.html  strategy_row.html  trades.html
src/portfolio/: tracker.py
src/risk/: manager.py
src/strategies/: base.py  bb_reversion.py  ema_cross.py  grid.py  registry.py  rsi.py
tests/unit/: test_backtesting.py  test_base_strategy.py  test_config.py  test_dashboard.py  test_event_bus.py  test_feed.py  test_main_helpers.py  test_order_manager.py  test_portfolio_tracker.py  test_risk_manager.py  test_strategies.py  test_telegram_bot.py  test_types.py
